# fluffy_rest_api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: dockerhub.yaml
src/: db.rs  main.rs  whiteboard.rs
src/api/: account.rs  ext_filemanager.rs  filemanager.rs  mod.rs  offline_whiteboard.rs  response.rs  whiteboard.rs  whiteboard_data.rs
src/api/toolbar_options/: background.rs  eraser.rs  figure.rs  highlighter.rs  mod.rs  pencil.rs  straight_line.rs  text_item.rs
src/api/websocket/: json_messages.rs  lobby.rs  messages.rs  mod.rs  start_connection.rs  websocket_tools.rs  websockethandler.rs  ws.rs
src/db/: account.rs  database.rs  database_migrations.rs  ext_filemanager.rs  filemanager.rs  mod.rs  offline_whiteboard.rs  whiteboard_data.rs
src/db/models/: ext_file.rs  file.rs  mod.rs  offline.rs  toolbar_options.rs  user.rs  whiteboard.rs
src/db/toolbar_options/: background.rs  eraser.rs  figure.rs  highlighter.rs  mod.rs  pencil.rs  straight_line.rs  text_item.rs
src/db/websocket/: bookmark.rs  mod.rs  scribble.rs  textitem.rs  upload.rs  websocket_types.rs
src/middlewares/: auth.rs
src/utils/: jwt.rs
