[package]
name = "fluffy_rest_api"
version = "0.1.0"
authors = ["Yonggan <yonggan@oblivioncoding.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
# Web Server
actix = "0.10.0"
actix-rt = "2.2.0"
actix-web = "3"
actix-web-actors = "3"
awc = "2"
actix-codec = "0.3"
actix-files = "0.3"
bytes = "0.5.3"
env_logger = "0.8.3"
serde = "1.0.126"
serde_json = "1.0.64"
# Scylla
scylla = "0.1.0"
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
async-recursion = "0.3.2"

# Authentication
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
argon2 = "0.2.0"
rand_core = { version = "0.6.2", features = ["std"] }
jsonwebtoken = "8.0.0-beta.2"

